# acre-docker

./: .gitignore  releases.md  setup.cfg
acre/docker/base/: Dockerfile1  Dockerfile2
acre/docker/base/acre-radish/: setup.cfg
acre/docker/base/acre-radish/acreradish/radishrun/: main.py  settings.py
acre/docker/base/etc/: requirements.txt
acre/docker/base/etc/apk/: repositories
acre/docker/base/installer/: tester-user.sh
