[metadata]
name = acre-radish
version = 0.2.1
description='invoke radish runs inside docker '

[options]
packages = find:
# packagae_data = var/**/*
include_package_data = True
install_requires =
    radish-bdd
    acre-lib
    pylogx>=1.0.0

[options.entry_points]
console_scripts =
    run-radish = acreradish.radishrun.main:main

[wheel]
universal=1
